# packages/backend/src/articles/dto/create-article.dto.ts
@@ -1,1 +1,14 @@
-export class CreateArticleDto {}
+import { ApiProperty } from "@nestjs/swagger";
+import { IsOptional, IsString } from "class-validator";
+
+export class CreateArticleDto {
+  @IsString()
+  @IsOptional()
+  @ApiProperty()
+  title?: string;
+
+  @IsString()
+  @IsOptional()
+  @ApiProperty()
+  content?: string;
+}
